GtkFileChooser: avoid a memory leak

The directory enumeration code was leaking references to
GtkFolder objects.

https://bugzilla.gnome.org/show_bug.cgi?id=705367